<resources>
    <string name="app_name">ProtaxiAndroidApp</string>
    <string name="title_activity_drivers_ubication">Protaxi</string>
    <string name="title_activity_main_window">MainWindow</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account">Create account</string>
    <string name="google_place_api">AIzaSyBn7SSsguQVEpm5QPgY-PDRuiap85vUGIs</string>
    <string name="google_distance_atrix_api_key">AIzaSyAO54dr--EDl-AgszBKvUGGQ5f9gDMtaOk</string>

</resources>
